Sonar polish: assertDoesNotThrow, getFirst(), drop unthrown exception
Co-Authored-By: Claude Code <noreply@anthropic.com>